--- a/jenkinsfile
+++ b/jenkinsfile
@@ -44,6 +44,7 @@ node() {
         try {
             stage('Execute Script') {
                 if (params.VERIFY_RUN) {
+				checkout scm
                                 def files = findFiles(glob: 'test/*') 
                                 def bootParamsOpts = []
                                 files.each{ f -> 
