--- a/env.yaml
+++ b/env.yaml
@@ -1,6 +1,5 @@
 ---
-boot: |-
-
+  # Boot section and convention
   # Hostname = The name of the machine
   # Cluster = sg for ServiceGuard, rh for Redhat, n for no clustering
   # Sequence Number is determines the order in which to bounce
@@ -11,14 +10,14 @@ boot: |-
   # DB hosts
   # DEVX Manu uses orrymana (QA DB)
   # App hosts
+boot: |-
   orryans03x:n:1:p:0
   orryans04x:n:1:p:0
   orryans05x:n:2:p:0
   orryans06x:n:2:p:5
 
 
-services: |-
-
+#service section and convention 
   # Type: DB or APP 
   # Hostname is the server hosting the service 
   # Execuser: The user that the control scripts must run as 
@@ -32,11 +31,12 @@ services: |-
   # the terminal.
   # type:hostname:execuser:stop:start:stoptimeout:starttimeout
   #
+
+services: |-
   app:orryans03x:root:echo "test":echo "test":0:0
   app:orryans04x:root:echo "test":echo "test":0:0
 
-
-validate: |-
+# validate section and convention
   # NOTE: For the stop/start confirms, some escapes must be used since these
   # will be executed via ssh. Example: \\ for \ or \$ for $
   # Type: DB or APP
@@ -50,17 +50,19 @@ validate: |-
   #
   # DB Host Note: DB is not checked since rthe QA DB server is not touched
   # for DEVX Manu patching.
+
+validate: |-
   app:orryans03x:jmsansp:echo "test":echo "test":5:60
   app:orryans04x:jmsansp:echo "test":echo "test":5:60
 
 
-
-clusterchk: |-
-
+# clustercheck section and convention
   # Hostname is the cluster node name
   # Clustertype: Service Guard (sg) or Red Hat (rh)
   # Clusterchk: The command to check cluster health
   # Googstatus: The expected output from the Clusterchk command
   # hostname:clusterchk:goodstatus
+
+clusterchk: |-
   orryans03x:rh:expr 1 + 1:2
   orryans04x:rh:expr 1 + 1:2
